--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>devops-starter</artifactId>
+    <artifactId>3sem_exam_backend</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>dat3-startcode</name>
+    <name>3sem_exam_backend</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -16,11 +16,11 @@
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
         <!-- IMPORTANT-1: If your server uses https (via NGINX) use your DOMAIN NAME and https below: -->
         <!-- IMPORTANT-2: Observe we are NOT using /manager/html but /manager/text for script uploads --> 
-	<remote.server>https://edu.bugelhartmann.dk/manager/text</remote.server>
+	<remote.server>https://cphcn332.dk/manager/text</remote.server>
 
         <!-- TODO: Add your own database name -->
         <!-- IMPORTANT-1: The database should exist on your droplet -->
-        <db.name>startcode</db.name>
+        <db.name>3sem_exam</db.name>
     </properties>
     
     <dependencies>
